--- a/Index.html
+++ b/Index.html
@@ -55,7 +55,7 @@
 
     
     <footer>
-        <p>2024 PoliSport#1. Todos los derechos reservados.</p>
+        <p>2024 PoliSport#1. Nuestras redes sociales.</p>
         <div class="social-links">
             <a href="#">Facebook</a>
             <a href="#">Twitter</a>
