--- a/contacto.html
+++ b/contacto.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contacto - PoliSport#1</title>
+    <link rel="stylesheet" href="CSS/bootstrap.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="js/bootstrap.js">
+    
+</head>
+<body>
+    <header>
+        <h1>PoliSport#1</h1>
+    </header>
 
+    <nav>
+        <a href="index.html">Inicio</a>
+        <a href="contacto.html">Contacto</a>
+    </nav>
+
+    <section id="testimonials" class="testimonials">
+        <h2>Lo que dicen nuestros clientes</h2>
+        <div class="testimonial">
+            <p>"¡Me encanta polisport Tiene los Guayos de mis extrellas favoritas de Futbol."</p>
+            <h4>- Carlos López</h4>
+        </div>
+        <div class="testimonial">
+            <p>"Nunca pense que unos Guayos tan hermosos pudiesen llegar a la región."</p>
+            <h4>- Pedro García</h4>
+        </div>
+    </section>
+
+    <section>
+        <h2>Contáctanos</h2>
+        <form action="#" method="post">
+            <input type="text" placeholder="Nombre" required>
+            <input type="email" placeholder="Correo electrónico" required>
+            <textarea placeholder="Escribe tu mensaje" required></textarea>
+            <button type="submit">Enviar</button>
+        </form>
+    </section>
+
+    <footer>
+        <p>2024 PoliSport#1</p>
+        <p>2024 PoliSport#1. Nuestras redes sociales.</p>
+        <div class="social-links">
+            <a href="#">Facebook</a>
+            <a href="#">Twitter</a>
+            <a href="https://www.instagram.com/polisport.uraba/">Instagram</a>
+        </div>
+    </footer>
+
+    <script src="js/bootstrap.js"></script>
+</body>
+</html>
